welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:51: error: ')' expected but integer literal found.
  while (!=6){
           ^Diagonal:60: error: illegal start of simple expression
} 
^